--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <div class="banar">
+            <p>Happy New Year</p>
+            <h1>New Year Party Celebration</h1>
+        </div>
+    </header>
     <main></main>
     <footer></footer>
 </body>
