midnight party added

--- a/index.html
+++ b/index.html
@@ -1,19 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>New Year Offer</title>
-    <link rel="stylesheet" href="styles/styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles/styles.css" />
+  </head>
+  <body>
     <header>
-        <div class="banar">
-            <p>Happy New Year</p>
-            <h1>New Year Party Celebration</h1>
-        </div>
+      <div class="banar">
+        <p>Happy New Year</p>
+        <h1>New Year Party Celebration</h1>
+      </div>
     </header>
-    <main></main>
+    <main>
+      <section class="discount-sec">
+        <div class="discount-container">
+          <h2>65% OFF</h2>
+          <div class="discount-extra-text">
+            <p>OUR HOLIDAY DEALS ARE BETTER</p>
+            <h3>ALL CATEGORIES</h3>
+          </div>
+          <img src="./assets/images/New Year Photo.png" alt="" />
+        </div>
+      </section>
+      <section class="midnight-party">
+        <div class="party-container">
+          <h1 class="welcome-msg">Welcome to <span>midnight party</span></h1>
+          <p class="party-desc">
+            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+            euismod.
+          </p>
+        </div>
+        <div class="join-btn">
+            <button>JOIN NOW</button>
+        </div>
+      </section>
+    </main>
     <footer></footer>
-</body>
+  </body>
 </html>
