best offer added

--- a/index.html
+++ b/index.html
@@ -34,7 +34,31 @@
           </p>
         </div>
         <div class="join-btn">
-            <button>JOIN NOW</button>
+          <button>JOIN NOW</button>
+        </div>
+      </section>
+      <section class="best-offer">
+        <div class="offer-container">
+          <div class="offer-intro offer-item">
+            <p>NEW BEST OFFER</p>
+            <h2>Coming Soon</h2>
+            <p class="intro-desc">
+              Dolor sit amet consectetur. Consequat eget consectetur maecenas
+              sed molestie malesuada. Ipsum sed sodales risus ut pellentesque
+              vel euismod.
+            </p>
+          </div>
+          <div class="offer-img offer-item">
+            <img src="./assets/images/Ellipse 1.png" alt="" />
+          </div>
+          <div class="offer-outtro offer-item">
+            <h3>2024</h3>
+            <p>
+              Dolor sit amet consectetur. Consequat eget consectetur maecenas
+              sed.
+            </p>
+            <img src="./assets/images/" alt="">
+          </div>
         </div>
       </section>
     </main>
