--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
           </div>
         </div>
       </section>
+      <section class="holyday-sale">
+        
+      </section>
     </main>
     <footer></footer>
   </body>
